--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 </head>
 <body>
         
+    <h1>Cadastro</h1>
+   <main class="tudo">
 Nome: <input type="text" id="nome">
+<div class="sob">
 Sobrenome: <input type="text" id="sobrenome"><br>
+</div>
+Email: <input type="text" id="nome">
+<div class="senha">
+Senha: <input type="text" id="nome">
+</div>
+Confirmação de senha: <input type="text" id="nome">
+data de nacimento: <input type="text" id="nome">
 <button type="button" onclick="Salvar()">Salvar</button>
   
+</main>
 
-<table>
-<thead>
-    <tr>
-        <th>Nome</th>
-        <th>Sobrenome</th>
-
-    </tr>
-</thead>
 <tbody id="cientes">
     
 </tbody>
